# SophyBot

./: .gitignore  Cargo.toml  Sophy.example.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
src/: bot.rs  cache.rs  config.rs  constants.rs  error.rs  logs.rs  main.rs  state.rs
src/bot/: error.rs  mod.rs  state.rs
src/bot/commands/: kick.rs  mod.rs
src/bot/handler/: mod.rs  xp.rs
src/cache/: mod.rs  user.rs
src/commands/: kick.rs
src/models/: xp.rs
src/service/: mod.rs  xp.rs
