[package]
name = "sophy_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.2.1"
figment = { version = "0.10.6", features = ["toml", "env"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "sync"] }
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.19"
redis = { version = "0.21.5", features = ["tokio-comp"] }
deadpool-redis = "0.10.2"
